# llm_exploration

./: .gitignore  FormattedTextSimilarity.ipynb  LICENSE  Phi_Finetuning.ipynb  Readme.md  bert_sparse_attention_training.ipynb  custom_collator.ipynb  dynamic_prompt_token_dropping.ipynb  exploring_sink_tokens.ipynb  keywords.txt  llm_weights_analysis.ipynb  phi_finetuning.ipynb  queries.txt  questions.json  riddle_reasoning_model.ipynb  sample.ipynb  superposition.ipynb  transformers_vs_vllm_logits.py
attention_skipping/: experiment.py  pyproject.toml  train.py
data/llm_outputs/: squad_llm_responses.csv
gated_attention/: gated_attention_viz.py  pyproject.toml
gated_delta_net/: blog.md  gated_delta_net.py  householder.ipynb
results/: custom_pretrained_layerwise_sparse_attention_results.pkl  dense_attention_results.pkl  gsmk_results_benchmark.csv  judgement_results.pkl  layerwise_sparse_attention_results.pkl  naive_judgement_results.pkl  sparse_attention_no_special_results.pkl  sparse_attention_results.pkl  text_neg_sub_judgement_results.pkl
simple_grpo_trainer/: GRPOTrainer.py  Readme.md  dataset_processor.py  pyproject.toml  rewards.py  schema.py
simple_grpo_trainer/src/: GRPOTrainer.py  benchmark_model.py  dataset_processor.py  rewards.py  schemas.py  train_trl_grpo.py
simple_grpo_trainer/test/: test_dataset_processor.py  test_rewards.py  test_trainer.py
transformer_from_scratch/: main.py  model.py  online_softmax.ipynb  pyproject.toml  self_attention_norm.ipynb  speculative_decoding.ipynb
transformer_from_scratch/distilling_init/: README.md  __init__.py  analyze_results.py  extract_stats.py  initialize_model.py  train_comparison.py
transformer_from_scratch/distilling_init/config/: default_config.yaml
transformer_from_scratch/distilling_init/utils/: data_utils.py  logging_utils.py  model_utils.py
visual_constraints_search/: config.py  data.py  embeddings.py  experiment.py  hello.py  judge.py  judgement_gradio_app.py  pyproject.toml  query_generation.py  report.py  requirements.txt  utils.py  vector_store.py
