[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "dotenv>=0.9.9",
    "hf-xet>=1.2.0",
    "huggingface-hub[cli]>=0.36.0",
    "ipykernel>=7.1.0",
    "kernels>=0.11.5",
    "matplotlib>=3.10.8",
    "numpy>=2.3.4",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "trackio>=0.13.0",
    "transformers>=4.57.3",
    "trl>=0.26.1",
]
