[project]
name = "visual-constraints-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "datasets==3.6.0",
    "einops>=0.8.1",
    "litellm>=1.74.1",
    "matplotlib>=3.10.3",
    "pillow>=11.3.0",
    "ruff>=0.12.2",
    "timm>=1.0.19",
    "torch[cpu]>=2.7.1",
    "transformers>=4.53.1",
]
